--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <body>
     <section class="s1">
         <div class="main-container">
-            <h1>Hi, My Name is Matthew Powell</h1>
+            <div class="greetings-wrapper">
+               <h1>Hi, My Name is Matthew Powell</h1>
+            </div>
         </div>
     </section>
 
